improve vignettes, documentation

--- a/vignettes/Data_formats.Rmd
+++ b/vignettes/Data_formats.Rmd
@@ -55,12 +55,12 @@ In the package there are, broadly speaking, two types of functions. Both `cxr_op
 
 We have included five increasingly complex fitness models with the package (`BH_1` to `BH_5`) as well as two effect/response models that follow eq. S3 on Appendix S4 of *Godoy, O., Kraft, N.J.B. & Levine, J.M. 2014. Phylogenetic relatedness and the determinants of competitive outcomes. Ecology Letters, 17:836–844*. The two effect/response models (`EffectResponse` and `EffectResponse_lambda`) differ on whether $\lambda$ is optimized or not. Nevertheless, since all these models are passed as parameters to the respective optimizing functions, users can define their own models and use them for parameterizing their data. The constraints that user-defined models have to follow are 1) that they use the same set of parameters as our models (i.e. `lambda`, `alpha`, `lambda.cov`, `alpha.cov`), and 2) that they return a single numeric value that can be minimized numerically (in our case, a log-likelihood).
 
-The data to provide to `cxr_optimize` is the fitness metric (log-transformed) of each observation, and the number of competitors for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that data must also match the number of observations.
+The data to provide to `cxr_optimize` is the fitness metric (log-transformed) of each observation, and the number of competitors for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that matrix/dataframe must also match the number of observations.
 
 The data for `ER_optimize` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. It should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `cxr_optimize`) the set of focal species must equal the set of competitor species. 2) the missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
 
 *2 - Data for coexistence metrics*
 
-The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition (e.g. $\lambda$), or competitive responses $r$. Thus, these metrics can be obtained with the output from `cxr_optimize` or `ER_optimize` or, in turn, with independent estimates of these parameters.
+The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition ($\lambda$), or competitive responses $r$. These metrics can be obtained with the output from `cxr_optimize` or `ER_optimize` or, in turn, with independent estimates.
   
   
