--- a/vignettes/BasicExample.Rmd
+++ b/vignettes/BasicExample.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 The `cxr` package provides a general interface to parameterize population dynamics models from empirical data, and obtain from the estimations of these parameters (species vital rates and interaction coefficients) a series of metrics associated with modern coexistence theory. These metrics measure the species competitive ability, their responses to competition as well as niche and average fitness differences (both demographic and competitive response differences).
 
-We will demonstrate the basic usage of the package, using the data included in it (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). In particular, with this dataset, we will obtain the values of seed production in the absence of neighbours and the strength of competitive interactions between pairs of species. Once obtained this information, these are the basis for estimating the degree of niche overlap and average fitness differences between a pair of species. 
+Here we demonstrate the basic usage of the package, using the data included in it (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874* for a description of the dataset). In particular, with this dataset, we will obtain the values of seed production in the absence of neighbours and the strength of competitive interactions between pairs of species. These values are the basis for estimating the degree of niche overlap and average fitness differences between a pair of species. 
 
 **Set up**
 
@@ -44,7 +44,7 @@ colnames(sp2.comp.matrix) <- my.sp[1]
 
 ```
 
-and also the estimation of fitness assocaited with each observation. In this particular case this is the seed production of focal individual to which the number of neighbours were also estimated from field observations. Note that we pass the log of the seed production (fitness metric) for facilitating the optimization procedure.
+and also the estimation of fitness assocaited with each observation. In this particular case this is the seed production of focal individuals, for which the number of neighbours (`comp.matrix`) were also taken from field observations. Note that we pass the log of the seed production (fitness metric) for facilitating the optimization procedure.
 
 ```{r message=F, warning=F}
 sp1.fitness <- two.sp.data$seed[which(two.sp.data$focal == my.sp[1])]
@@ -64,7 +64,7 @@ We will fit the parameters of model 3. This model differentiates between intra- 
 
 $$F_i = \frac{\lambda_i}{1+\sum \alpha_{ij}N_j}$$
 
-Specifying an optimization method, we can now call the main function with sensible values of upper and lower parameter bounds. We have implemented optimization with eight different optimization methods, that cover a range of methodologies (see e.g. the help of `cxr_optimize for the available methods`, and *Mullen, K.M. 2014. Continuous Global Optimization in R. Journal of Statistical Software 60:1–45* for an overview of optimization methods.)
+Specifying an optimization method, we can now call the main function with sensible values of upper and lower parameter bounds. We have implemented optimization with eight different optimization methods, that cover a range of methodologies (see e.g. the help of `cxr_optimize` for the available methods, and *Mullen, K.M. 2014. Continuous Global Optimization in R. Journal of Statistical Software 60:1–45* for an overview of optimization methods.)
 
 ```{r message=F, warning=F}
 sp1.par <- cxr_optimize(fitness.model = BH_3,
@@ -105,7 +105,7 @@ The `cxr_optimize` function returns a list with several components
 sp1.par
 ```
 
-In this basic example, we are only interested in obtaining from the optimization process the seed production in the absence of competition (lambda), and the alpha values (both intra and inter specific interactions), the row of the interaction matrix that corresponds to our focal species. Other components are NA either because the third model does not account for them (e.g. `lambda.cov` or `alpha.cov`), or because we are not estimating them (e.g. standard errors). In any case, we can retrieve the estimated 2x2 interaction matrix from the results.
+In this basic example, we are only interested in obtaining from the optimization process the seed production in the absence of competition (lambda), and the intra- and interspecific interactions, i.e. the row of the interaction matrix that corresponds to our focal species. Other components are NA either because the third model does not account for them (e.g. `lambda.cov` or `alpha.cov`), or because we are not estimating them (e.g. standard errors). In any case, we can retrieve the estimated 2x2 interaction matrix from the results.
 
 ```{r message=F, warning=F}
 interaction.matrix <- matrix(c(sp1.par$alpha, sp2.par$alpha), nrow = length(my.sp), byrow = TRUE)
