--- a/vignettes/ParamOptimization_caracoles.Rmd
+++ b/vignettes/ParamOptimization_caracoles.Rmd
@@ -148,7 +148,7 @@ And a flag for storing or not the results of the analysis
 
 ```{r message=F, warning=F}
 # store results?
-write.results <- FALSE
+write.results <- TRUE
 ```
 
 **Initialize results structure** 
@@ -389,7 +389,7 @@ for(i.sp in 1:length(focal.sp)){
 
 ```
 
-If we set the flag, the nested list will be written to disk as a .RData file. The list structure is very convenient for handling these results in R, as it maintains the nested design of the parameterization (per species, model, and optimization method). However, it may also be necessary to have the results as dataframes and csv files, e.g. for plotting. Here we build four dataframes, in long format, for the different sets of parameters: lambda, alpha, lambda.cov, and alpha.cov. This assumes that covariates are named, so the vectors returned from the list are also named.
+If we set the flag, the nested list will be written to disk as a .RData file. The list structure is very convenient for handling these results in R, as it maintains the nested design of the parameterization (per species, model, and optimization method). However, it may also be necessary to have the results as dataframes and csv files, e.g. for plotting. Here we build four dataframes, in long format, for the different sets of parameters: lambda, alpha, lambda.cov, and alpha.cov. This code assumes that covariates are named, so that vectors returned from the list are also named.
 
 ```{r message=F, warning=F}
 if(write.results){
@@ -475,32 +475,41 @@ if(write.results){
         my.alpha.cov.lower.vector <- param_estimates[[focal.sp[i.sp]]][[my.models[i.model]]][[optim.methods[i.method]]]$alpha.cov.lower.error
         my.alpha.cov.upper.vector <- param_estimates[[focal.sp[i.sp]]][[my.models[i.model]]][[optim.methods[i.method]]]$alpha.cov.upper.error
         
-        my.alpha.cov.comp <- substr(names(my.alpha.cov.vector),str_length(names(my.alpha.cov.vector))-3,str_length(names(my.alpha.cov.vector)))
+        # differentiate models 4 and 5
+        if(!is.null(my.covariates) & !is.na(my.alpha.cov.vector[1])){
+          if(length(my.alpha.cov.vector) == length(my.covariates)){
+            my.alpha.cov.comp <- competitors
+          }else{
+            my.alpha.cov.comp <- substr(names(my.alpha.cov.vector),
+                                        stringr::str_length(names(my.alpha.cov.vector))-3,
+                                        stringr::str_length(names(my.alpha.cov.vector)))
+          }# if-else single alpha.cov
+          
+          for(i.covariate in 1:length(my.covariates)){
+            my.cov <- my.alpha.cov.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.vector)))]
+            my.lower.cov <- my.alpha.cov.lower.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.lower.vector)))]
+            my.upper.cov <- my.alpha.cov.upper.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.upper.vector)))]
+            
+            alpha.cov.pos <- which(alpha.cov.values$focal == focal.sp[i.sp] &
+                                     alpha.cov.values$model == my.models[i.model] &
+                                     alpha.cov.values$method == optim.methods[i.method] &
+                                     alpha.cov.values$competitor %in% my.alpha.cov.comp & 
+                                     alpha.cov.values$covariate == my.covariates[i.covariate])
+            
+            alpha.cov.values$alpha.cov[alpha.cov.pos] <- my.cov
+            alpha.cov.values$alpha.cov.lower[alpha.cov.pos] <- my.lower.cov
+            alpha.cov.values$alpha.cov.upper[alpha.cov.pos] <- my.upper.cov
+          }
+        }# if covariates and alpha.cov.values
         
-        for(i.covariate in 1:length(my.covariates)){
-          my.cov <- my.alpha.cov.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.vector)))]
-          my.lower.cov <- my.alpha.cov.lower.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.lower.vector)))]
-          my.upper.cov <- my.alpha.cov.upper.vector[which(grepl(my.covariates[i.covariate],names(my.alpha.cov.upper.vector)))]
-          
-          alpha.cov.pos <- which(alpha.cov.values$focal == focal.sp[i.sp] &
-                                   alpha.cov.values$model == my.models[i.model] &
-                                   alpha.cov.values$method == optim.methods[i.method] &
-                                   alpha.cov.values$competitor %in% my.alpha.cov.comp & 
-                                   alpha.cov.values$covariate == my.covariates[i.covariate])
-          
-          alpha.cov.values$alpha.cov[alpha.cov.pos] <- my.cov
-          alpha.cov.values$alpha.cov.lower[alpha.cov.pos] <- my.lower.cov
-          alpha.cov.values$alpha.cov.upper[alpha.cov.pos] <- my.upper.cov
-        }
-
       }# for each method
     }# for each model
   }# for each sp
   
-  # write.csv(lambda.values,file = "./results/lambda_values.csv",sep = ";")
-  # write.csv(lambda.values,file = "./results/alpha_values.csv",sep = ";")
-  # write.csv(lambda.values,file = "./results/lambda_cov_values.csv",sep = ";")
-  # write.csv(lambda.values,file = "./results/alpha_cov_values.csv",sep = ";")
+  # write.csv2(lambda.values,file = "your/path/lambda_values.csv",row.names = F,append = F)
+  # write.csv2(alpha.values,file = "your/path/alpha_values.csv",row.names = F,append = F)
+  # write.csv2(lambda.cov.values,file = "your/path/lambda_cov_values.csv",row.names = F,append = F)
+  # write.csv2(alpha.cov.values,file = "your/path/alpha_cov_values.csv",row.names = F,append = F)
   
 }
 ```
