--- a/vignettes/Data_formats.Rmd
+++ b/vignettes/Data_formats.Rmd
@@ -3,14 +3,14 @@ title: "Data and model formats"
 output: rmarkdown::html_vignette
 author: cxr team
 vignette: >
-  %\VignetteIndexEntry{Data formats}
+  %\VignetteIndexEntry{Data and model formats}
   %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
 ---
 
 **Introduction**
 
-The `cxr` package provides diverse functions to handle interaction datasets, but the data provided needs to be in certain formats for compatibility. We will show the structure of the included dataset, and the specific formats accepted by functions of the package. Furthermore, we briefly discuss the models included in the package.
+The `cxr` package provides diverse functions to handle interaction datasets, but the data provided needs to be in certain formats for compatibility. We will show the structure of the included dataset, and the specific formats accepted by functions of the package. We also discuss the structure of the population models included in the package and how users can develop their own models.
 
 **The Caracoles dataset**
 
@@ -19,7 +19,7 @@ We include a dataset of plant annual species, for which their per capita fecundi
 The table for competition is
 
 ```{r}
-data("competition")
+data("competition", package = "cxr")
 ```
 
 its structure is as follows: for each observation of a focal individual, the date is recorded, alongside the plot and subplot where the observation was made. Finally, we include the number of fruits and seeds of that particular individual, and how many neighbours (competitors) of each species were in its surroundings (taken as a circunference of radius 7.5 cm).
@@ -31,36 +31,62 @@ head(competition)
 The abundance table is algo stored in a long format, in which we give, for each plot and subplot, the number of individuals of each species at their developmental peak:
 
 ```{r}
-data("abundance")
+data("abundance", package = "cxr")
 head(abundance)
 ```
 
-We also include seed survival and germination rates for each species:
+We also include seed survival and germination rates for each species, obtained independently:
 
 ```{r}
-data("species_rates")
+data("species_rates", package = "cxr")
 species_rates
 ```
 
 and the values of an environmental covariate, salinity, for each sampling unit:
 
 ```{r}
-data("salinity")
+data("salinity", package = "cxr")
 head(salinity)
 ```
 
 In the package there are, broadly speaking, two types of functions. Both `cxr_optimize` and `ER_optimize` accept field data and numerically estimate parameters of a given model. On the other hand, other functions (`AvgFitnessRatio`, `NicheOverlap`, or `CompetitiveAbility`) take these estimates and return coexistence metrics for a single species or pairs of them.
 
-*1 - Data and models for optimization functions*
-
-We have included five increasingly complex fitness models with the package (`BH_1` to `BH_5`) as well as two effect/response models that follow eq. S3 on Appendix S4 of *Godoy, O., Kraft, N.J.B. & Levine, J.M. 2014. Phylogenetic relatedness and the determinants of competitive outcomes. Ecology Letters, 17:836–844*. The two effect/response models (`EffectResponse` and `EffectResponse_lambda`) differ on whether $\lambda$ is optimized or not. Nevertheless, since all these models are passed as parameters to the respective optimizing functions, users can define their own models and use them for parameterizing their data. The constraints that user-defined models have to follow are 1) that they use the same set of parameters as our models (i.e. `lambda`, `alpha`, `lambda.cov`, `alpha.cov`), and 2) that they return a single numeric value that can be minimized numerically (in our case, a log-likelihood).
+**Data for optimization functions**
 
 The data to provide to `cxr_optimize` is the fitness metric (log-transformed) of each observation, and the number of competitors for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that matrix/dataframe must also match the number of observations.
 
 The data for `ER_optimize` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. It should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `cxr_optimize`) the set of focal species must equal the set of competitor species. 2) the missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
 
-*2 - Data for coexistence metrics*
+**Data for coexistence metrics**
 
 The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition ($\lambda$), or competitive responses $r$. These metrics can be obtained with the output from `cxr_optimize` or `ER_optimize` or, in turn, with independent estimates.
-  
-  
+
+**Population dynamics models**
+
+The cxr package provides users with a flexible interface to fit their own models and data, and at the same time incorporates state-of-the-art dynamic models for annual plant populations. The five models included in the package (functions `BH_1` to `BH_5`) estimate the per-germinant fecundity $F_i$ of a plant individual, in the context of an annual plant model with seed bank:
+
+$$N_{i,t+1}^s/N_{i,t}^s = (1-g_{i})s_i + g_iF_i$$
+
+In this general formulation, $N^s_{i,t}$ is the number of seeds in the soil for species i prior to germination (in the fall or winter). The superscript s refers to seeds, when we refer to adult individuals we will use the notation $N^a$. The per capita growth rate for the population (left side of the above equation) is a weighted average of two different growth rates: $s_i$, the annual survival of ungerminated seed in the soil, and $F_i$, the viable seeds produced per germinated individual.
+
+Per-germinant fecundity is a composite term potentially dependant on intrinsic species fecundity, pairwise interactions, and the effect of other covariates. We included all these potentialities in the five models coded for $F_i$, which follow a general Beverton-Holt functional form. In particular, models 1-3 only include the effects of intrinsic fecundity ($\lambda$) and pairwise interactions ($\alpha$), whereas the effect of covariates over lambda ($\Theta$) and over alpha ($\phi$) is included in models 4-5:
+
+| cxr function | Formula |
+| -----------  | ----------- |
+| BH_1    | $F_i = \lambda_i$ |
+| BH_2    | $F_i = \frac{\lambda_i}{1+\alpha N*}$ |
+| BH_3    | $F_i = \frac{\lambda_i}{1+ (\sum_{j=1}^n \alpha_{ij} N_j})$ |
+| BH_4    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ik}C_k) N_j)}$ |
+| BH_5    | $F_i = \frac{\lambda_i (1+ \sum_{k = 1}^c \Theta_{ik}C_k)}{1+ (\sum_{j=1}^n (\alpha_{ij} + \sum_{k=1}^c \phi_{ijk}C_k) N_j)}$ |
+
+Users can estimate model parameters using the provided formulations or develop their own, bearing in mind two constraints. First, the provided models need to comply with the set of parameters of the general formulation, i.e.: 
+
+$$F_i= f(\lambda_i,\alpha,\Theta,\phi)$$
+
+which are coded in the package functions as lambda, alpha, lambda.cov, and alpha.cov, respectively. Note that $F_i$ need not refer exclusively to plant fecundity, but can be thought as any fitness property of an individual, thus expanding the applicability of the package to any taxa in which species compete for a set of resources. In order to obtain the optimal parameter values given a model and dataset, we use numerical optimization procedures. These work by finding the minimum of an objective function within a parameter space, and thus, our second constraint is that the function to minimize must return a single numeric value. In our formulation, our models return the associated log-likelihood of the data and parameters fitted.
+
+A complementary set of two models is also provided, that estimate competitive effects and responses for every species. These models follow the same equation (Appendix S4 in *Godoy, et al. 2014. Ecology Letters, 17:836–844*):
+
+$$F_i = \frac{\lambda_i}{1+r_i \sum_j^n e_j N_j^a}$$
+
+where $r_i$ is the species’ competitive response and $e_i$ is the species’ competitive effect; our models only differ on whether is taken as a fixed parameter (function `EffectResponse.R`) or is optimized as well in the routine (function `EffectResponse_lambda.R`).
