--- a/vignettes/ParamOptimization_caracoles.Rmd
+++ b/vignettes/ParamOptimization_caracoles.Rmd
@@ -10,11 +10,11 @@ vignette: >
 
 **Introduction**
 
-This document explains how to optimize several models that predict species fecundity. This means that models with increasing number is a more complex version of the previous model. This procedure is intended to avoid overfitting problems and promote convergence of the more complex models. Here, we present how to use data obtained from experiments or field observations to predict species fecundity as a function of the intrinsic ability of species to produce offspring (lambda), and interaction coefficients with other species (alpha). The model is its most simpler version takes the following form:
+This document explains how to optimize several models that predict species fecundity. This means that models with increasing number is a more complex version of the previous model. This procedure is intended to avoid overfitting problems and promote convergence of the more complex models. Here, we present how to use data obtained from experiments or field observations to predict species fecundity as a function of the intrinsic ability of species to produce offspring ($\lambda$), and interaction coefficients with other species ($\alpha$). The model in its most simpler version takes the following form:
 
 $$F = \frac{\lambda}{1+\alpha}$$
 
-This form is basically a Beverton-Holt model. Following modifications of this model will allow us obtaining the interactions matrix for paris of species, and the effect of covariables (including biotic and abiotic factors) on both lambda and alpha coefficients. All together this information is key for obtaining information of different drivers determining the outcome of species interaction at local scales, which are widely used in "modern" coexistence studies. Most of this vignette presents data preparation from how is obtained in the field to the appropriate format for the analysis. 
+This form is basically a Beverton-Holt model. Following modifications of this model will allow us obtaining the interaction matrices for pairs of species, and the effect of covariables (including biotic and abiotic factors) on both $\lambda$ and $\alpha$ coefficients (see vignette `Data and model formats` for details on the five models implemented). All together this information is key for obtaining information of different drivers determining the outcome of species interaction at local scales, which are widely used in "modern" coexistence studies. Most of this vignette presents data preparation from how is obtained in the field to the appropriate format for the analysis. 
 
 **Setup**
 
@@ -24,8 +24,8 @@ We start loading the package and the associated dataset (see vignette `Data and 
 
 ```{r message=F, warning=F}
 library(cxr)
-data(competition)
-data(salinity)
+data(competition, package = "cxr")
+data(salinity, package = "cxr")
 ```
 
 **Preparing the data**
@@ -49,13 +49,11 @@ full.data <- dplyr::left_join(competition.data,salinity)
 Now, we set some general variables regarding the models we want to use, and the parameters we want to estimate.
 Note that if we include more than one model, the optimization procedures proceed sequentially; e.g., if we estimate parameters from models 3, 4, and 5. 
 
-IMPORTANT POINT HERE DO WE NEED TO DESCRIBE THE STRUCTURE OF THESE DIFFERENT MODELS??
-
 ```{r message=F, warning=F}
 models <- 3:5
 ```
 
-This sequential procedure means tha the output from model 3 will be taken as initial estimates for model 4, and the output from model 4 will be the initial estimates for model 5. Note, as well, that models 4 and 5 differ from model 3 in that they include the effect of covariates on species seed production in the absence of competition and interactions. Therefore, you should only include these models if you have at least one covariate in your data (see *Lanuza, Bartomeus, Godoy, 2018, Ecology Letters 21:865-874*).
+This sequential procedure means tha the output from model 3 will be taken as initial estimates for model 4, and the output from model 4 will be the initial estimates for model 5. Note, as well, that models 4 and 5 differ from model 3 in that they include the effect of covariates on species seed production in the absence of competition and interactions. Therefore, you should only include these models if you have at least one covariate in your data (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874*).
 
 We can estimate the whole parameter set for each model, or fix certain parameters, for example, in case there are independent field estimation of some of them. This information is passed to the function in a list, in which each element is a string vector giving the set of parameters that are to be optimized for each model. In our example, we optimize all parameters (note that model 3 has only $\lambda$ and $\alpha$ parameters, whereas models 4 and 5 also include the effect of covariates).
 
@@ -137,7 +135,7 @@ lower.alpha.cov <- 1e-10
 upper.alpha.cov <- 1e4
 ```
 
-Importantly, the package allow computing estimations of standard errors. This error estimation is done via bootstrapping for two reasons. One is that obtaining estimation of error using Hessian matrices is unstable due to several computational issues, but sencondly and more importantly, error distributions of your variable might not follow a normal distribution. Please remember that the estimation of errors can be, depending on the model and optimization method, computationally expensive. We recommend 999 runs, yet we provide here a minimal example of it (setting `bootstrap.samples` to only 3 runs).
+Importantly, the package allows computing estimations of standard errors. This error estimation is done via bootstrapping, for two reasons. One is that obtaining estimation of error using Hessian matrices is unstable due to several computational issues, but sencondly and more importantly, error distributions of your variable might not follow a normal distribution, and bootstrapping is a non-parametric method that may recover any error distribution. Please remember that the estimation of errors can be, depending on the model and optimization method, computationally expensive. We recommend 999 runs, yet we provide here a minimal example of it (setting `bootstrap.samples` to only 3 runs).
 
 ```{r message=F, warning=F}
 generate.errors <- TRUE
