--- a/vignettes/coexistence_plot.Rmd
+++ b/vignettes/coexistence_plot.Rmd
@@ -8,7 +8,7 @@ vignette: >
   \usepackage[utf8]{inputenc}
 ---
 
-In this document, we draw the coexistence region of our plant community and locate every pair of species in this region accroding to two orthogonal axes: average fitness differences (y-axis) and niche differences (x-axis). For that, we use the parameters previously calculated for each species (see vignette `Multi-species parameter optimization`), and the germination and seed soil bank survival rates, which are both stored with the package. Please note that germination and seed survival rates are a particular feature of the annual plant model (see *Godoy and Levine. 2014. Ecology 95: 726-736* for details), but other models might be adapted to other species particularities. 
+In this vignette, we draw the coexistence region of the plant community dataset included with the package, and locate every pair of species in this region according to two orthogonal axes: average fitness differences (y-axis) and niche differences (x-axis). For that, we use the parameters previously calculated for each species (see vignette `Multi-species parameter optimization`), and the germination and seed soil bank survival rates, which are both stored with the package. Please note that germination and seed survival rates are a particular feature of the annual plant model (see *Godoy and Levine. 2014. Ecology 95: 726-736* for details), but other models might be adapted to other species particularities. 
 
 ```{r message=F, warning=F}
 library(cxr)
