--- a/vignettes/effect_response_caracoles.Rmd
+++ b/vignettes/effect_response_caracoles.Rmd
@@ -10,7 +10,7 @@ vignette: >
 
 **Introduction**
 
-In other vignettes we have estimated a series of interactions coefficients between pairs of species. These estimations allow species to be differentiated in their niche and their average fitness (via competitive response differences). However, it is also possible to obtain a metric per species of the average interaction effect to all other species, or their average response when interacting with all other species. This is done by estimating all these coefficients for all species at the same time, and not each species as a time as previous modelling procedures. With this procedure, we do not allow species to be differentiated in their niche (see *Godoy, Kraft, and Levine, 2014, Ecology Letters 17:836-844* for further details). Again, here we consider the plant species from the associated data. Please note that here per-germinant fecundity estimates ($\lambda$) generated independently are used as fixed parameters.
+In other vignettes we have estimated a series of interactions coefficients between pairs of species. These estimations allow species to be differentiated in their niche and their average fitness (via competitive response differences). However, it is also possible to obtain a metric per species of the average interaction effect to all other species, or their average response when interacting with all other species. This is done by estimating all these coefficients for all species at the same time, and not each species as a time as previous modelling procedures. With this procedure, we do not allow species to be differentiated in their niche (see *Godoy, Kraft, and Levine. 2014. Ecology Letters 17:836-844* for further details). Again, here we consider the plant species from the associated data. Please note that here per-germinant fecundity estimates ($\lambda$) generated independently are used as fixed parameters.
 
 **Set up**
 
@@ -18,8 +18,8 @@ In other vignettes we have estimated a series of interactions coefficients betwe
 library(cxr)
 # for usign the pipe operator, %>%
 library(magrittr)
-data(competition)
-data(param_estimates)
+data(competition, package = "cxr")
+data(param_estimates, package = "cxr")
 ```
 
 As in other vignettes, we need to specify which optimization method are we using, and whether we want to generate standard errors from bootstrapping.
@@ -155,7 +155,7 @@ Double-check that we only include species that have proper estimates
 sp.data <- subset(sp.data, focal %in% lambda.values$sp & competitor %in% lambda.values$sp)
 ```
 
-Finally, set initial values for e (i.e. competitive effects) and r (i.e competitive responses), as well as their lower and upper bounds. Lower and upper bounds are most likely to be the same for all species, and in that case it is convenient to provide a single value. If we want to specify different values for every species, we can pass vectors of the same length as the lambda, e, and r parameters.
+Finally, set initial values for $e$ (i.e. competitive effects) and $r$ (i.e competitive responses), as well as their lower and upper bounds. Lower and upper bounds are most likely to be the same for all species, and in that case it is convenient to provide a single value. If we want to specify different values for every species, we can pass vectors of the same length as the $\lambda$, $e$, and $r$ parameters.
 
 ```{r message=F, warning=F}
 r.values <- rep(1,nrow(lambda.values))
